Set .osjs-root as fixed to prevent browser overflow issues

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -41,6 +41,9 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-image: url('~@osjs/core/src/styles/wallpaper.png');
+  position: fixed;
+  top: 0;
+  left: 0;
 
   textarea, input, label {
     user-select: all;
